	Fixed bug where FF 3 produced -moz- internal styles in some style attributes.
	Fixed bug where query strings and external URLs didn't work correctly in style attributes.
	Fixed bug where shape attribute of area elements got serialized as rect regardless of it's initial value in IE 6.
	Fixed bug where selection of elements inside layers would fail in IE since focus was moved to the document body.
	Fixed issue where the wrong parent editor instance might be updated if you use fullscreen mode in an incorrect way.
	Fixed issue where Safari was producing a warning about the base element not being closed correctly.
	Removed redundant form element name matching from regexp in the DOMUtils class.
Version 3.0.9 (2008-06-02)
	Added new contextmenu_offset_x/contextmenu_offset_y options for the contextmenu plugin.
	Added cite attribute to the default rule for the blockquote element.
	Added support for using arrow keys for selection of items in listboxes.
	Added support for using arrow keys for selection of items in dropmenus.
	Fixed bug where blockformat change on elements with BR inside them didn't change correctly on Firefox.
	Fixed bug where removing table rows inside thead or tfoot would remove the whole table if it was the last one.
	Fixed bug where XHR synchronous mode didn't execute the callback handlers synchronously.
	Fixed bug where setting border to 0 didn't add border: 0 to the style attribute when using the advimage dialog.
	Fixed bug where the selection of images and table cells didn't work correctly when the editor is placed in a frame and running on IE.
	Fixed bug where the store/restore of a selection didn't work correctly in non IE browsers.
	Fixed bug where only the first element would be invalid for the invalid_elements option.
	Fixed bug where paste as plain text didn't encode the characters correctly when they where inserted.
	Fixed bug where HTML source window couldn't be maximized on Gecko when the maximizable feature was enabled.